Fixed logic behind language switcher to land on the same sub-page with a different locale

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -88,11 +88,10 @@ nav {
 }
 
 .lang-switcher {
-    ul {
-        display: flex;
-        gap: 1rem;
-        list-style: none;
-    }
+    display: flex;
+    gap: 1rem;
+    list-style: none;
+
     img {
         border-radius: 50%;
         box-shadow: inset -24px 1px rgba(0, 0, 0, 0.1);
